--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <script type="text/javascript" src="js/p5.min.js"></script>
-    <script type="text/javascript" src="js/sketch.js"></script>
-  </body>
+<html >
+<head>
+  <meta charset="UTF-8">
+  <title>Clemb p5</title>
+      <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <script src="//172.16.128.119:8000/socket.io/socket.io.js"></script>
+  <p id="mouseData">Hello</p>
+  <p id="rangerData">World</p>
+  <script src='js/p5.min.js'></script>
+<script src='js/p5.sound.js'></script>
+<script src="js/sketch.js"></script>
+
+</body>
 </html>
